--- a/index.css
+++ b/index.css
@@ -327,14 +327,20 @@ button:disabled {
   from { opacity: 1; transform: translateX(0); }
   to   { opacity: 0; transform: translateX(100%); }
 }
+/*.filigrane {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  opacity: 0.12;
+  font-size: 150px;
+  pointer-events: none;
+  z-index: 9999;
+}*/
 .filigrane {
-  position: fixed;     /* Toujours visible */
-  bottom: 10px;        /* Décalage depuis le bas */
-  right: 10px;         /* Décalage depuis la droite */
-  opacity: 0.12;       /* Transparence */
-  font-size: 150px;     /* Taille du texte */
-  pointer-events: none; /* Ignorer les clics */
-  z-index: 9999;       /* Toujours au-dessus */
+  
+  flex: 1;
+  opacity: 0.12;
+  font-size: 150px;
 }
 .logoutBtn {
   background: #f37640;
