--- a/index.css
+++ b/index.css
@@ -41,6 +41,16 @@ header {
   max-width: 500px; /* limite la largeur si l'écran est très large */
   gap: 10px;
 }
+#social {
+  padding: 25px 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  /*width: 100%;*/
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 10px;
+}
 #recus {
   flex: 0 0 auto;
   display: flex;
